# online-cinema

./: .dockerignore  .env.sample  .env.test.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
alembic/: env.py
alembic/versions/: 00822d63aee2_create_movies_tables.py  4d1b7103a66e_add_accounts_models.py  5d4d4b9d0195_add_purchasedmovie_model.py  6f8171ce8ab4_create_orders_models.py  7a951177723d_update_movies_tables.py  8741b24de6ed_create_shopping_carts_models.py  b0dd30c7e7a9_add_is_available_field_to_movie_model.py  be2ee464668a_add_commentreaction_model.py  c0bb005751bc_create_orders_models_v2.py  cc2273dd83f8_add_pending_to_paymentstatusenum.py  dae9217f6efd_add_payment_intent_id_field_to_payment_.py  e162f1b0c6f9_initial_migration.py  e1e1e4035d25_initial_migration.py  f69c3addfcd2_create_payments_models.py
commands/: entrypoint.sh
src/: celery_app.py  database.py  main.py  seed.py
src/config/: database.py  dependencies.py  settings.py
src/models/: __init__.py  accounts.py  movies.py  orders.py  payments.py  shopping_carts.py
src/notifications/: emails.py  interfaces.py
src/notifications/templates/: activation_complete.html  activation_request.html  confirmation_payment.html  password_reset_request.html  reaction_comment.html  reply_comment.html  reset_password.html
src/routes/: __init__.py  accounts.py  movies.py  orders.py  payments.py  shopping_carts.py
src/routes/cinema/: __init__.py  directors.py  genres.py  interactions.py  movies.py  stars.py
src/schemas/: accounts.py  movies.py  orders.py  payments.py  shopping_carts.py
src/security/: interfaces.py  token_manager.py
src/tasks/: accounts.py  payments.py
src/tests/: conftest.py  test_helpers.py
src/tests/test_functional/: test_interactions.py  test_movies.py  test_orders.py  test_payments.py  test_shopping_carts.py
src/tests/test_integration/: test_accounts.py  test_interactions.py  test_movies.py  test_orders.py  test_payments.py  test_shopping_carts.py
src/tests/test_unit/: test_accounts.py  test_email_notification.py  test_interactions.py  test_movies.py  test_orders.py  test_payments.py  test_seed_user_groups.py  test_shopping_carts.py
src/utils/: seed.py  utils.py
